--- a/front-end/chatflow/src/Home/Home.css
+++ b/front-end/chatflow/src/Home/Home.css
@@ -1,6 +1,6 @@
 .fixed.inset-0.flex.flex-col.bg-gray-100 {
     margin-left: 250px;
-    background-color: rgb(253, 167, 141);
+    background-color: #F8F8FF;
 }
 
 .flex-1.p-2.border.border-gray-300.rounded-lg, .p-3.rounded-lg.bg-white.border.border-gray-200{
@@ -10,12 +10,12 @@
 }
 
 .p-3.rounded-lg.bg-blue-600.text-white {
-    background-color: rgb(37, 128, 192);
+    background-color: rgb(88, 186, 255);
 }
 
 .flex.items-center.gap-2.p-4.border-t.border-gray-200.bg-white {
     display: flex;
-    background-color: rgb(255, 197, 138);
+    background-color: #f8f8ff;
     height: 150px;
 }
 
