--- a/front-end/chatflow/src/Home/Home.css
+++ b/front-end/chatflow/src/Home/Home.css
@@ -6,7 +6,7 @@
 .flex-1.p-2.border.border-gray-300.rounded-lg, .p-3.rounded-lg.bg-white.border.border-gray-200{
     color: black;
     text-align: center;
-    border-radius: 100px;
+    /* border-radius: 100px; */
 }
 
 .p-3.rounded-lg.bg-blue-600.text-white {
@@ -34,4 +34,9 @@
         width: 100%;
         margin-left: 0px;
     }  
+}
+
+
+.flex-1.overflow-hidden.overflow-y-auto {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
