--- a/front-end/chatflow/src/Home/Home.css
+++ b/front-end/chatflow/src/Home/Home.css
@@ -1,6 +1,6 @@
 .fixed.inset-0.flex.flex-col.bg-gray-100 {
     margin-left: 250px;
-    background-color: #F8F8FF;
+    background-color: #b0b0b0;
 }
 
 .flex-1.p-2.border.border-gray-300.rounded-lg, .p-3.rounded-lg.bg-white.border.border-gray-200{
@@ -15,7 +15,7 @@
 
 .flex.items-center.gap-2.p-4.border-t.border-gray-200.bg-white {
     display: flex;
-    background-color: #f8f8ff;
+    background-color: #111827;
     height: 150px;
 }
 
@@ -38,5 +38,11 @@
 
 
 .flex-1.overflow-hidden.overflow-y-auto {
+    background-image: url(../../public/bg.png);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.flex-1.border.text-black {
+    width: 700px;
+}
+
